# ContactBookFlet

./: .editorconfig  .gitignore  agenda.py  contact_book.py  pyproject.toml
agenda/: app.py
contact_book/: app.py  constants.py  theme.py
contact_book/model/: contact.py
contact_book/screens/: exceptions.py
contact_book/screens/contact_list/: screen.py  view.py
contact_book/screens/new_contact/: screen.py  view.py
contact_book/storage/database/: __init__.py  contacts_table.py
contact_book/storage/preferences/: settings.py
