[tool.poetry]
name = "agenda"
version = "0.1.0"
description = ""
authors = ["Gamaliel Garcia <46827955+EGAMAGZ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.4.0"
tinydb = "^4.7.1"
ruff = "^0.0.246"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
