[tool.poetry]
name = "ContactBook"
version = "0.1.0"
description = ""
authors = ["Gamaliel Garcia <46827955+EGAMAGZ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.4.0"
tinydb = "^4.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.246"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E", # pycodestyle (Errors)
    "W", # pycodestyle (Warnings)
    "F", # Pyflakes
    "PL", # pylint
    "N", # pep8-naming
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "I", # isort,
]

fixable = ["E", "A", "F", "W", "I"]